--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
 
   padding: 1rem 2rem;
   background: rgba(255, 255, 255, 0.25);
+  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -70,7 +71,7 @@
 
     &:hover {
       div {
-        background-color: var(--secondary-color);
+        background: var(--secondary-color);
       }
     }
   }
@@ -89,7 +90,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--secondary-color);
+  background-color: var(--secondary-color);
 
   svg {
     width: 70%;
@@ -113,12 +114,14 @@
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
-    background: url(../../assets/bgWhite.png);
+
+    background: url("../../assets/bgWhite.png");
     background-color: var(--white-color);
     background-size: cover;
     background-repeat: repeat;
 
-    box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+    /* top box shadow */
+    box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
 
     svg {
       width: 35px;
@@ -157,10 +160,12 @@
         }
       }
     }
+
     @media screen and (min-width: 900px) {
       display: none;
     }
   }
+
   @media screen and (min-width: 900px) {
     display: none;
   }
